[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "clint"
version = "0.1.0"
description = "A custom linter for qcflow to enforce rules that ruff doesn't cover."
readme = "README.md"
authors = [{ name = "qcflow", email = "qcflow@qcflow.com" }]
dependencies = ["tomli"]

[tool.setuptools]
package-dir = { "" = "src" }

[project.scripts]
clint = "clint:main"
